# Custom-OpenCV

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Template/: CustomCV.cpp  CustomCV.h
